fixed the footer as best I could, made sure the scroll bards weren't overlapped, plus I made them look cool, and repaired the menu on the index page

--- a/portfolio/portfolio.css
+++ b/portfolio/portfolio.css
@@ -11,6 +11,16 @@ body{
     margin-bottom: 0px;
     margin-left: 0px;
     background-color: #666;
+    overflow-x: inherit;
+}
+
+body::-webkit-scrollbar {
+    background-color: #666;
+    width: 10px;
+}
+
+body::-webkit-scrollbar-thumb{
+    background-color: #555;
 }
 
 h1 {
@@ -75,14 +85,38 @@ a:visited:hover{color:#eee;}
     background: #666;
     padding-left: 10px;
     border-left: 5px solid #555;
+    display: inline-block;
+    overflow-y: scroll;
+}
+
+#menu::-webkit-scrollbar{
+    background-color: #666;
+    width: 10px;
+    z-index: 1;
+}
+
+#menu::-webkit-scrollbar-thumb{
+    background-color: #555;
+}
+
+#menu-wrapper{
+    height:100%;
+    position: absolute;
+    display: block;
+    background: red;
 }
 
 #menu-top-content{
-    padding-bottom: 50px;
+    display: inline-block;
+    padding-bottom: 30px;
+    max-width: 585px;
+    position: absolute;
+    top: 0px;
 }
 
 #menutop{
-    min-height: 150px;
+    max-height: 150px;
+    min-height: 8vh;
     margin-left: 10px;
     margin-top: 20px;
     font: bold 35px trebuchet ms;
@@ -121,7 +155,7 @@ a:visited:hover{color:#eee;}
 }
 
 #aboutc{
-    min-width: 560px;
+    min-width: 530px;
 }
 
 #main {
@@ -133,10 +167,17 @@ a:visited:hover{color:#eee;}
 }
 
 #footer {
-    position: absolute;
-    bottom: 13px;
-    left: 0px;
+    position: fixed;
+    bottom: 0px;
+    right: 10px;
     font-size: 11px;
+    display: block;
+    width: inherit;
+    min-width: 300px;
+    background: #666;
+    padding-bottom: 10px;
+    margin-bottom: 0px;
+    text-align: center;
 }
 
 #status {
